# NextGenZip

./: README_CLOUD.md  README_STAGE_A.md  README_STAGE_B.md  README_STAGE_C.md  README_STAGE_D.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/workflows/: android-ci.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/androidTest/java/com/aktarjabed/nextgenzip/data/: DataStoreManagerMigrationTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  llama_native.cpp  llamainfer.cpp
app/src/main/java/com.aktarjabed.nextgenzip/data/model/: ArchiveProgress.kt
app/src/main/java/com/aktarjabed/nextgenzip/: App.kt  MainActivity.kt
app/src/main/java/com/aktarjabed/nextgenzip/ai/: AIManager.kt  CloudAIClient.kt  LlamaAIManager.kt  LlamaNativeBridge.java  NativeBridge.java  SafeLlamaManager.kt
app/src/main/java/com/aktarjabed/nextgenzip/data/: ApiKeyStore.kt  ArchiveEngine.kt  ArchiveService.kt  CloudConfigStore.kt  CloudSyncManager.kt  CloudUsageStore.kt  DataStoreManager.kt  FavoritesRepository.kt  HistoryRepository.kt
app/src/main/java/com/aktarjabed/nextgenzip/navigation/: NavGraph.kt
app/src/main/java/com/aktarjabed/nextgenzip/notifications/: NotificationHelper.kt
app/src/main/java/com/aktarjabed/nextgenzip/security/: MalwareDetectionService.kt  MalwareRemovalService.kt  SecurityConfig.kt  (+2 more)
app/src/main/proto/: archive_history_entry.proto  favorite_archives.proto
app/src/main/res/drawable/: ic_archive_notification.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/xml/: backup_rules.xml
(+28 files in other folders)
